syntax = "proto3";

package vdp.model.v1alpha;

// Protobuf standard
import "google/protobuf/struct.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

// Google api
import "google/api/resource.proto";
import "google/api/field_behavior.proto";

import "model_definition.proto";

// Model represents a model
message Model {
  option (google.api.resource) = {
    type : "api.instill.tech/Model"
    pattern : "models/{model}"
  };

  // Model visibility including public or private
  enum Visibility {
    // Visibility: UNSPECIFIED, equivalent to PRIVATE.
    VISIBILITY_UNSPECIFIED = 0;
    // Visibility: PRIVATE
    VISIBILITY_PRIVATE = 1;
    // Visibility: PUBLIC
    VISIBILITY_PUBLIC = 2;
  }

  // Resource name. It must have the format of "models/{model}".
  // For example: "models/yolov4"
  string name = 1 [ (google.api.field_behavior) = OUTPUT_ONLY ];
  // Model ID in UUIDv4
  string uid = 2 [ (google.api.field_behavior) = OUTPUT_ONLY ];
  // Resource ID (the last segment of the resource name) used to construct the
  // resource name. This conforms to RFC-1034, which restricts to letters,
  // numbers, and hyphen, with the first character a letter, the last a letter
  // or a number, and a 63 character maximum.
  string id = 3 [ (google.api.field_behavior) = IMMUTABLE ];
  // Model description
  optional string description = 4 [ (google.api.field_behavior) = OPTIONAL ];
  // Model definition resource name
  string model_definition = 5 [
    (google.api.field_behavior) = IMMUTABLE,
    (google.api.resource_reference).type = "api.instill.tech/ModelDefinition"
  ];
  // Model configuration represents the configuration JSON that has been
  // validated using the `model_spec` JSON schema of a ModelDefinition
  google.protobuf.Struct configuration = 6 [ (google.api.field_behavior) = IMMUTABLE ];
  // Model visibility including public or private
  Visibility visibility = 7 [ (google.api.field_behavior) = OUTPUT_ONLY ];
  // Model owner
  oneof owner {
    // The resource name of a user, e.g., "users/local-user".
    string user = 8 [
      (google.api.resource_reference).type = "api.instill.tech/User",
      (google.api.field_behavior) = OUTPUT_ONLY
    ];
    // The resource name of an organization
    string org = 9 [
      (google.api.resource_reference).type = "api.instill.tech/Organization",
      (google.api.field_behavior) = OUTPUT_ONLY
    ];
  };
  // Model create time
  google.protobuf.Timestamp create_time = 10
      [ (google.api.field_behavior) = OUTPUT_ONLY ];
  // Model update time
  google.protobuf.Timestamp update_time = 11
      [ (google.api.field_behavior) = OUTPUT_ONLY ];
}

// ModelVersion represents one deployable instance of a model
message ModelInstance {
  option (google.api.resource) = {
    type : "api.instill.tech/ModelInstance",
    pattern : "models/{model}/instances/{instance}"
  };

  // Task enumerates the task type of a model instance
  enum Task {
    // Task: UNSPECIFIED
    TASK_UNSPECIFIED = 0;
    // Task: CLASSIFICATION
    TASK_CLASSIFICATION = 1;
    // Task: DETECTION
    TASK_DETECTION = 2;
    // Task: KEYPOINT
    TASK_KEYPOINT = 3;
  }
  // State enumerates a model instance state
  enum State {
    // State: UNSPECIFIED
    STATE_UNSPECIFIED = 0;
    // State: OFFLINE
    STATE_OFFLINE = 1;
    // State: ONLINE
    STATE_ONLINE = 2;
    // State: ERROR
    STATE_ERROR = 3;
  }

  // Resource name. It must have the format of
  // "models/{model}/instances/{instance}"
  string name = 1 [ (google.api.field_behavior) = OUTPUT_ONLY ];
  // Model instance ID in UUIDv4
  string uid = 2 [ (google.api.field_behavior) = OUTPUT_ONLY ];
  // Model instance ID (the last segment of the resource name), used to
  // construct the resource name. This conforms to RFC-1034, which restricts to
  // letters, numbers, and hyphen, with the first character a letter, the last a
  // letter or a number, and a 63 character maximum.
  string id = 3 [ (google.api.field_behavior) = OUTPUT_ONLY ];
  // Model instance state
  State state = 4 [ (google.api.field_behavior) = OUTPUT_ONLY ];
  // Model instance task
  Task task = 5 [ (google.api.field_behavior) = OUTPUT_ONLY ];
  // Model definition resource name
  string model_definition = 6 [
    (google.api.field_behavior) = OUTPUT_ONLY,
    (google.api.resource_reference).type = "api.instill.tech/ModelDefinition"
  ];
  // Model instance configuration represents the configuration JSON that
  // has been validated using the `model_instance_spec` JSON schema of a
  // ModelDefinition
  google.protobuf.Struct configuration = 7 [ (google.api.field_behavior) = OUTPUT_ONLY ];
  // Model instance create time
  google.protobuf.Timestamp create_time = 8
      [ (google.api.field_behavior) = OUTPUT_ONLY ];
  // Model instance update time
  google.protobuf.Timestamp update_time = 9
      [ (google.api.field_behavior) = OUTPUT_ONLY ];
}

// ModelInstanceCard represents the README card for a model instance. There
// exists one and exactly one README card per model instance.
message ModelInstanceCard {
  option (google.api.resource) = {
    type : "api.instill.tech/ModelInstanceCard"
    pattern : "models/{model}/instances/{instance}/readme"
  };

  // Resource name. It must have the format of
  // "models/{model}/instances/{instance}/readme"
  string name = 1 [ (google.api.field_behavior) = OUTPUT_ONLY ];
  // Size of the file
  int32 size = 2 [ (google.api.field_behavior) = OUTPUT_ONLY ];
  // Type of the resource. Fixed to "file".
  string type = 3 [ (google.api.field_behavior) = OUTPUT_ONLY ];
  // Content of the README file in bytes and base64 format
  bytes content = 4 [ (google.api.field_behavior) = OUTPUT_ONLY ];
  // Encoding type of the content. Fixed to "base64".
  string encoding = 5 [ (google.api.field_behavior) = OUTPUT_ONLY ];
}

// ListModelRequest represents a request to list all models
message ListModelRequest {
  // Page size: the maximum number of resources to return. The service may
  // return fewer than this value. If unspecified, at most 10 models will be
  // returned. The maximum value is 100; values above 100 will be coereced to
  // 100.
  optional int64 page_size = 1 [ (google.api.field_behavior) = OPTIONAL ];
  // Page token
  optional string page_token = 2 [ (google.api.field_behavior) = OPTIONAL ];
  // Model view (default is VIEW_BASIC)
  // VIEW_UNSPECIFIED/VIEW_BASIC: omit `Model.configuration`
  // VIEW_FULL: show full information
  optional View view = 3 [ (google.api.field_behavior) = OPTIONAL ];
}

// ListModelResponse represents a response for a list of models
message ListModelResponse {
  // a list of Models
  repeated Model models = 1;
  // Next page token
  string next_page_token = 2;
  // Total count of models
  int64 total_size = 3;
}

// CreateModelRequest represents a request to create a model
message CreateModelRequest {
  // The model to be created
  //
  // The model `name` field is used to identify the model to create.
  // Format: models/{model}
  Model model = 1 [ (google.api.field_behavior) = REQUIRED ];
}

// CreateModelResponse represents a response for a model
message CreateModelResponse {
  // The created model
  Model model = 1;
}

// CreateModelBinaryFileUploadRequest represents a request to create a model
message CreateModelBinaryFileUploadRequest {
  // The model to be created
  //
  // The model `name` field is used to identify the model to create.
  // Format: models/{model}
  Model model = 1 [ (google.api.field_behavior) = REQUIRED ];
  // Model content in bytes
  bytes content = 2 [ (google.api.field_behavior) = REQUIRED ];
}

// CreateModelBinaryFileUploadResponse represents a response for a model
// instance
message CreateModelBinaryFileUploadResponse {
  // The created model
  Model model = 1 [ (google.api.field_behavior) = OUTPUT_ONLY ];
}

// GetModelRequest represents a request to query a model
message GetModelRequest {
  // Resource name of the model.
  // For example "models/{model}"
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference).type = "api.instill.tech/Model",
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      field_configuration : {path_param_name : "model.name"}
    }
  ];
  // Model view (default is VIEW_BASIC)
  // VIEW_UNSPECIFIED/VIEW_BASIC: omit `Model.configuration`
  // VIEW_FULL: show full information
  optional View view = 2 [ (google.api.field_behavior) = OPTIONAL ];
}

// GetModelResponse represents a response for a model
message GetModelResponse {
  // The retrieved model
  Model model = 1;
}

// UpdateModelRequest represents a request to update a model
message UpdateModelRequest {
  // The model to update
  //
  // The model `name` field is used to identify the model to update.
  // Format: models/{model}
  Model model = 1 [ (google.api.field_behavior) = REQUIRED ];
  // Mask of fields to update.
  google.protobuf.FieldMask update_mask = 2
      [ (google.api.field_behavior) = REQUIRED ];
}

// UpdateModelResponse represents a response for a model
message UpdateModelResponse {
  // The updated model
  Model model = 1;
}

// DeleteModelRequest represents a request to delete a model
message DeleteModelRequest {
  // Resource name of the model.
  // For example "models/{model}"
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference).type = "api.instill.tech/Model",
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      field_configuration : {path_param_name : "model.name"}
    }
  ];
}

// DeleteModelResponse represents an empty response
message DeleteModelResponse {}

// LookUpModelRequest represents a request to query a model instance by
// permalink
message LookUpModelRequest {
  // Permalink of a model. For example:
  // "models/{uid}"
  string permalink = 1 [ (google.api.field_behavior) = REQUIRED ];
  // Model view (default is VIEW_BASIC)
  // VIEW_UNSPECIFIED/VIEW_BASIC: omit `Model.configuration`
  // VIEW_FULL: show full information
  optional View view = 2 [ (google.api.field_behavior) = OPTIONAL ];
}

// LookUpModelResponse represents a response for a model instance
message LookUpModelResponse {
  // A model resource
  Model model = 1;
}

// RenameModelRequest represents a request to rename a model
message RenameModelRequest {
  // Resource name for the model to be renamed.
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference).type = "api.instill.tech/Model"
  ];

  // New ID of this model
  string new_model_id = 2 [ (google.api.field_behavior) = REQUIRED ];
}

// RenameModelResponse represents a response for a model
message RenameModelResponse {
  // Renamed model
  Model model = 1;
}

// PublishModelRequest represents a request to publish a model
message PublishModelRequest {
  // Resource name of the model.
  // For example "models/{model}"
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference).type = "api.instill.tech/Model"
  ];
}

// PublishModelResponse represents a response for the published model
message PublishModelResponse {
  // Published model
  Model model = 1;
}

// UnpublishModelRequest represents a request to unpublish a model
message UnpublishModelRequest {
  // Resource name of the model.
  // For example "models/{model}"
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference).type = "api.instill.tech/Model"
  ];
}

// UnpublishModelResponse represents a response for the unpublished model
message UnpublishModelResponse {
  // Unpublished model
  Model model = 1;
}

// ListModelInstanceRequest represents a request to list all instances of a
// model
message ListModelInstanceRequest {
  // The name of the model whose instances we'd like to list.
  // e.g., "models/yolov4"
  string parent = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference).type = "api.instill.tech/Model"
  ];

  // Page size: the maximum number of resources to return. The service may
  // return fewer than this value. If unspecified, at most 10 model instances
  // will be returned. The maximum value is 100; values above 100 will be
  // coereced to 100.
  optional int64 page_size = 2 [ (google.api.field_behavior) = OPTIONAL ];
  // Page token
  optional string page_token = 3 [ (google.api.field_behavior) = OPTIONAL ];
  // Model instance view (default is VIEW_BASIC)
  // VIEW_UNSPECIFIED/VIEW_BASIC: omit `ModelInstance.configuration`
  // VIEW_FULL: show full information
  optional View view = 4 [ (google.api.field_behavior) = OPTIONAL ];
}

// ListModelInstanceResponse represents a response for a list of model instances
message ListModelInstanceResponse {
  // a list of Model instances
  repeated ModelInstance instances = 1;
  // Next page token
  string next_page_token = 2;
  // Total count of model instances
  int64 total_size = 3;
}

// GetModelInstanceRequest represents a request to query a model instance
message GetModelInstanceRequest {
  // Resource name of the model instance.
  // For example "models/{model}/instances/{instance}"
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference).type = "api.instill.tech/ModelInstance",
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      field_configuration : {path_param_name : "model_instance.name"}
    }
  ];
  // Model instance view (default is VIEW_BASIC)
  // VIEW_UNSPECIFIED/VIEW_BASIC: omit `ModelInstance.configuration`
  // VIEW_FULL: show full information
  optional View view = 2 [ (google.api.field_behavior) = OPTIONAL ];
}

// GetModelInstanceResponse represents a response for a model instance
message GetModelInstanceResponse {
  // Retrieved model instance
  ModelInstance instance = 1;
}

// LookUpModelInstanceRequest represents a request to query a model instance by
// permalink
message LookUpModelInstanceRequest {
  // Permalink of a model instance. For example:
  // "models/{model_uid}/instances/{instance_uid}"
  string permalink = 1 [ (google.api.field_behavior) = REQUIRED ];
  // Model instance view (default is VIEW_BASIC)
  // VIEW_UNSPECIFIED/VIEW_BASIC: omit `ModelInstance.configuration`
  // VIEW_FULL: show full information
  optional View view = 2 [ (google.api.field_behavior) = OPTIONAL ];
}

// LookUpModelInstanceResponse represents a response for a model instance
message LookUpModelInstanceResponse {
  // A model instance
  ModelInstance instance = 1;
}

// DeployModelInstanceRequest represents a request to deploy a model instance to
// online state
message DeployModelInstanceRequest {
  // Resource name for the model instance to be deployed.
  // Format: models/{model}/instances/{instance}
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference).type = "api.instill.tech/ModelInstance"
  ];
}

// DeployModelInstanceResponse represents a response for a deployed model
// instance
// TODO: should use [Long-running operations](https://google.aip.dev/151)
message DeployModelInstanceResponse {
  // Deployed model instance
  ModelInstance instance = 1;
}

// UndeployModelInstanceRequest represents a request to undeploy a model
// instance to offline state
message UndeployModelInstanceRequest {
  // Resource name for the model instance to be undeployed.
  // Format: models/{model}/instances/{instance}
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference).type = "api.instill.tech/ModelInstance"
  ];
}

// UndeployModelInstanceResponse represents a response for a undeployed model
// instance
// TODO: should use [Long-running operations](https://google.aip.dev/151)
message UndeployModelInstanceResponse {
  // Undeployed model instance
  ModelInstance instance = 1;
}

// GetModelInstanceCardRequest represents a request to query a model instance's
// README card
message GetModelInstanceCardRequest {
  // Resource name of the model instance card.
  // For example "models/{model}/instances/{instance}/readme"
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference).type = "api.instill.tech/ModelInstanceCard",
    (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
      field_configuration : {path_param_name : "model_instance.name/readme"}
    }
  ];
}

// GetModelInstanceCardResponse represents a response to fetch a model
// instance's README card
message GetModelInstanceCardResponse {
  // Retrieved model instance card
  ModelInstanceCard readme = 1;
}

////////////////////////////////////
//  Custom methods
////////////////////////////////////

// Input represents the input to trigger a model instance
message Input {
  // Input type
  oneof type {
    // Image type URL
    string image_url = 1;
    // Image type base64
    string image_base64 = 2;
  }
}

// ClassificationOutput represents the output of classification task
message ClassificationOutput {
  // Classification category
  string category = 1 [ (google.api.field_behavior) = OUTPUT_ONLY ];
  // Classification score
  float score = 2 [ (google.api.field_behavior) = OUTPUT_ONLY ];
}

// ClassificationOutputs represents a list of classification task outputs
message ClassificationOutputs {
  // A list of classification outputs
  repeated ClassificationOutput classification_outputs = 1
      [ (google.api.field_behavior) = OUTPUT_ONLY ];
}

// Keypoint structure which include coordinate and keypoint visibility
message Keypoint {
  // x coordinate
  float x = 1 [ (google.api.field_behavior) = OUTPUT_ONLY ];
  // y coordinate
  float y = 2 [ (google.api.field_behavior) = OUTPUT_ONLY ];
  // visibility
  float v = 3 [ (google.api.field_behavior) = OUTPUT_ONLY ];
}

// List of keypoints and a score corresponding to a person object
message KeypointObject {
  // Keypoints
  repeated Keypoint keypoints = 1 [ (google.api.field_behavior) = OUTPUT_ONLY ];
  // Keypoint score
  float score = 2 [ (google.api.field_behavior) = OUTPUT_ONLY ];
}

// KeypointOutput represents the output of keypoint detection task
message KeypointOutputs {
  // Keypoint Objects
  repeated KeypointObject keypoint_outputs = 1 [ (google.api.field_behavior) = OUTPUT_ONLY ];
}

// BoundingBox represents the bounding box data structure
message BoundingBox {
  // Bounding box top y-axis value
  float top = 1 [ (google.api.field_behavior) = OUTPUT_ONLY ];
  // Bounding box left x-axis value
  float left = 2 [ (google.api.field_behavior) = OUTPUT_ONLY ];
  // Bounding box width value
  float width = 3 [ (google.api.field_behavior) = OUTPUT_ONLY ];
  // Bounding box height value
  float height = 4 [ (google.api.field_behavior) = OUTPUT_ONLY ];
}

// BoundingBoxObject represents a predicted bounding box object
message BoundingBoxObject {
  // Bounding box object category
  string category = 1 [ (google.api.field_behavior) = OUTPUT_ONLY ];
  // Bounding box object score
  float score = 2 [ (google.api.field_behavior) = OUTPUT_ONLY ];
  // Bounding box
  BoundingBox bounding_box = 3 [ (google.api.field_behavior) = OUTPUT_ONLY ];
}

// DetectionOutput represents the output of detection task
message DetectionOutput {
  // A list of bounding box objects
  repeated BoundingBoxObject bounding_box_objects = 1
      [ (google.api.field_behavior) = OUTPUT_ONLY ];
}

// DetectionOutputs represents a list of detection task outputs
message DetectionOutputs {
  // A list of detection outputs
  repeated DetectionOutput detection_outputs = 1
      [ (google.api.field_behavior) = OUTPUT_ONLY ];
}

// TriggerModelInstanceRequest represents a request to trigger a model instance
message TriggerModelInstanceRequest {
  // The resource name of the model instance to trigger.
  // For example "models/{model}/instances/{instance}"
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference).type = "api.instill.tech/ModelInstance"
  ];
  // Input to trigger the model instance
  repeated Input inputs = 2 [ (google.api.field_behavior) = REQUIRED ];
}

// TriggerModelInstanceResponse represents a response for the output for
// triggering a model instance
message TriggerModelInstanceResponse {
  // Output from a model
  google.protobuf.Struct output = 1;
}

// TriggerModelInstanceBinaryFileUploadRequest represents a request to test a
// model instance by uploading binary file
message TriggerModelInstanceBinaryFileUploadRequest {
  // The resource name of the model instance to trigger.
  // For example "models/{model}/instances/{instance}"
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference).type = "api.instill.tech/ModelInstance"
  ];
  // The list of file length for each uploaded binary file
  repeated uint64 file_lengths = 2 [ (google.api.field_behavior) = REQUIRED ];
  // Content of images in bytes
  bytes content = 3 [ (google.api.field_behavior) = REQUIRED ];
}

// TriggerModelInstanceBinaryFileUploadResponse represents a response for the
// output for testing a model instance
message TriggerModelInstanceBinaryFileUploadResponse {
  // Output from a model
  google.protobuf.Struct output = 1;
}

// TestModelInstanceRequest represents a request to test a model instance
message TestModelInstanceRequest {
  // The resource name of the model instance to trigger.
  // For example "models/{model}/instances/{instance}"
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference).type = "api.instill.tech/ModelInstance"
  ];
  // Input to trigger the model instance
  repeated Input inputs = 2 [ (google.api.field_behavior) = REQUIRED ];
}

// TestModelInstanceResponse represents a response for the output for
// testing a model instance
message TestModelInstanceResponse {
  // Output from a model
  google.protobuf.Struct output = 1;
}

// TestModelInstanceBinaryFileUploadRequest represents a request to test a
// model instance by uploading binary file
message TestModelInstanceBinaryFileUploadRequest {
  // The resource name of the model instance to trigger.
  // For example "models/{model}/instances/{instance}"
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference).type = "api.instill.tech/ModelInstance"
  ];
  // The list of file length for each uploaded binary file
  repeated uint64 file_lengths = 2 [ (google.api.field_behavior) = REQUIRED ];
  // Content of images in bytes
  bytes content = 3 [ (google.api.field_behavior) = REQUIRED ];
}

// TestModelInstanceBinaryFileUploadResponse represents a response for the
// output for testing a model instance
message TestModelInstanceBinaryFileUploadResponse {
  // Output from a model
  google.protobuf.Struct output = 1;
}
